test/Eval/assert-stringify.src
// V %srcc --sema --verify -fstringify-asserts %s
program test;

#assert false; // expected-error (Assertion failed: 'false') expected-note (Condition evaluated to: false)